--- a/image/demos/index.html
+++ b/image/demos/index.html
@@ -13,4 +13,13 @@ limitations under the License.
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-e
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" href="./style.css">
+  <title>MagentaImage.js demos</title>
+</head>
+<body>
+  <h1>MagentaImage.js demos</h1>
+
+  <h2>Models</h2>
+  <secti
