--- a/image/demos/index.html
+++ b/image/demos/index.html
@@ -22,4 +22,11 @@ limitations under the License.
   <h1>MagentaImage.js demos</h1>
 
   <h2>Models</h2>
-  <secti
+  <section>
+    <h3>
+      <ul>
+        <li><a href="arbitrary_stylization.html">Perform fast stylization on an arbitrary content and style image pair</a></li>
+      </ul>
+    </h3>
+  </section>
+</body>
