build: Updating mediawiki/mediawiki-phan-config to 0.9.0

--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -12,4 +12,13 @@ limitations under the License.
 <html>
 <head>
   <meta charset="utf-8">
-  <meta h
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" href="./style.css">
+  <title>Coconet</title>
+</head>
+<body>
+  <h1>Coconet</h1>
+
+  <p>Coconet is an instance of an orderlessNADE, that uses deep convolutional
+    neural networks to
