--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -21,4 +21,11 @@ limitations under the License.
   <h1>Coconet</h1>
 
   <p>Coconet is an instance of an orderlessNADE, that uses deep convolutional
-    neural networks to
+    neural networks to perform music inpaintings through Gibbs sampling.
+    In the demo below, we call <code>infill()</code> to create Bach-style
+    4-part harmonies with the provided input, and display the result.
+  </p>
+
+  <h2>Infilling the first voice</h2>
+  <p>The default behaviour of the model is to infill all of the "silence"
+    in a No
