--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -28,4 +28,11 @@ limitations under the License.
 
   <h2>Infilling the first voice</h2>
   <p>The default behaviour of the model is to infill all of the "silence"
-    in a No
+    in a NoteSequence. In this example, only the first voice (Soprano) is present
+    for all the time steps, so Coconet will infill the other 3 voices (Alto,
+    Tenor and Bass)
+  </p>
+  <section>
+    <p><b>Input:</b> <code id="input-1"></code></p>
+    <p><b>Result:</b> <code id="output-1">Loading...</code></p>
+    <p><b>It took:</b> <cod
