--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -35,4 +35,10 @@ limitations under the License.
   <section>
     <p><b>Input:</b> <code id="input-1"></code></p>
     <p><b>Result:</b> <code id="output-1">Loading...</code></p>
-    <p><b>It took:</b> <cod
+    <p><b>It took:</b> <code id="time-1"></code></p>
+  </section>
+
+  <h2>Infilling the third voice with configuration parameters.</h2>
+  In this example, only the Tenor voice is present, so we infill the first 2
+  and last voices (Soprano, Alto, Bass). In addition, we also use the
+  <code>temperature</code> and <code>numIterations</code> parameters to th
