--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -41,4 +41,13 @@ limitations under the License.
   <h2>Infilling the third voice with configuration parameters.</h2>
   In this example, only the Tenor voice is present, so we infill the first 2
   and last voices (Soprano, Alto, Bass). In addition, we also use the
-  <code>temperature</code> and <code>numIterations</code> parameters to th
+  <code>temperature</code> and <code>numIterations</code> parameters to the
+  <code>infill()</code> method.
+  <section>
+    <p><b>Input:</b> <code id="input-2"></code></p>
+    <p><b>Result:</b> <code id="output-2">Loading...</code></p>
+    <p><b>It took:</b> <code id="time-2"></code></p>
+  </section>
+
+  <h2>Infilling a missing section from all the voices</h2>
+  <p>As mentioned before, the default behaviour
