Added AppVeyor badge

--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -50,4 +50,11 @@ limitations under the License.
   </section>
 
   <h2>Infilling a missing section from all the voices</h2>
-  <p>As mentioned before, the default behaviour
+  <p>As mentioned before, the default behaviour of the model is to infill all
+    of the "silent" measures. In order to distinguish between intended rests and
+    infill sections, you can use the <code>infillMask</code> parameter to
+    specify exactly which section to be infilled.
+  </p>
+  <section>
+    <p><b>Input:</b> <code id="input-3"></code></p>
+    <p><b>Result:</b> <co
