--- a/music/demos/coconet.html
+++ b/music/demos/coconet.html
@@ -57,4 +57,11 @@ limitations under the License.
   </p>
   <section>
     <p><b>Input:</b> <code id="input-3"></code></p>
-    <p><b>Result:</b> <co
+    <p><b>Result:</b> <code id="output-3">Loading...</code></p>
+    <p><b>It took:</b> <code id="time-3"></code></p>
+  </section>
+
+  <p><b>Total Leaked Memory:</b> <code id="leaked-memory"></code></b></p>
+  <script src="coconet_bundle.js"></script>
+</body>
+</html>
