Add Travis badge.

--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -19,4 +19,15 @@ limitations under the License.
     />
     <link rel="stylesheet" href="./style.css" />
     <title>DDSP Tone Transfer</title>
-  </hea
+  </head>
+  <body>
+    <h1>DDSP Tone Transfer</h1>
+    <p>
+      <code><a href="https://g.co/magenta/ddsp">DDSP</a></code>
+      lets you combine the interpretable structure of classical DSP elements
+      (such as filters, oscillators, reverberation, etc.) with the expressivity
+      of deep learning
+    </p>
+    <section>
+      <h2>
+        To start, you 
