--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -30,4 +30,12 @@ limitations under the License.
     </p>
     <section>
       <h2>
-        To start, you 
+        To start, you first have to initialize
+        <a href="https://tfhub.dev/google/tfjs-model/spice/2/default/1">SPICE</a> so that you can use
+        SPICE to extract pitches from your audio.
+      </h2>
+      <code
+        >const spice = new mm.SPICE(); <br />await spice.initialize();
+      </code>
+
+      <p><button id="initialize">Initialize</button
