e1000e: remove use of IP payload checksum

--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -48,4 +48,20 @@ limitations under the License.
       <code>spice.getAudioFeatures(audioBuffer)</code>
       <p>
         Upload an audio file and call the `getAudioFeatures` method to get audio
-        feature
+        features from your input audio.
+      </p>
+      <p>
+        <input
+          accept=".wav,.mp3,.oga,.aac"
+          className="recorder__input"
+          type="file"
+          id="upload"
+        />
+      </p>
+      <p>
+        <code id="audio_features"></code>
+      </p>
+    </section>
+
+    <section id="buttons" style="display: none">
+   
