Added deployment script

--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -64,4 +64,14 @@ limitations under the License.
     </section>
 
     <section id="buttons" style="display: none">
-   
+      <h2>Synthesize</h2>
+      <p>
+        To start synthesizing your audio, initialize mm.DDSP making sure to pass
+        in the URL of your own model or use one of our
+        <a
+          href="https://github.com/magenta/magenta-js/tree/master/music/checkpoints#table"
+          >4 models</a
+        >
+        (look for DDSP models).
+      </p>
+      <code
