--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -75,3 +75,11 @@ limitations under the License.
         (look for DDSP models).
       </p>
       <code
+        >const ddsp = new mm.DDSP(checkpointUrl); <br />
+        ddsp.synthesize(audioFeatures)</code
+      >
+      <p>
+        <button id="button_violin">Violin</button>
+        <button id="button_trumpet">Trumpet</button>
+        <button id="button_tenor_saxophone">Tenor Saxophone</button>
+        <button id="button_flute">Flute</b
