Nothing to see here.

--- a/music/demos/ddsp_tone_transfer.html
+++ b/music/demos/ddsp_tone_transfer.html
@@ -82,4 +82,11 @@ limitations under the License.
         <button id="button_violin">Violin</button>
         <button id="button_trumpet">Trumpet</button>
         <button id="button_tenor_saxophone">Tenor Saxophone</button>
-        <button id="button_flute">Flute</b
+        <button id="button_flute">Flute</button>
+      </p>
+      <audio id="player" controls style="display: none"></audio>
+    </section>
+
+    <script src="./ddsp_tone_transfer_bundle.js"></script>
+  </body>
+</html>
