--- a/music/demos/melody_controls.html
+++ b/music/demos/melody_controls.html
@@ -44,3 +44,73 @@ limitations under the License.
   </section>
 
   <h2>Generate Rhythm Directly</h2>
+  <section>
+    <h3>Interpolation (5 steps) <span id="generate-melody-rhythm"></span></h3>
+    <p>Interpolate between melody rhythms.</p>
+    <p><b>Input:</b> <code id="mel-rhythm-inputs"></code></p>
+    <p><b>Result:</b> <code id="mel-rhythm-interp"></code></p>
+    <p><b>It took:</b> <code id="mel-rhythm-interp-time"></code></p>
+
+    <br>
+
+    <h3>Similar Rhythm Generation</h3>
+    <p>Generate rhythms similar to a source rhythm.</p>
+    <p><b>Source:</b> <code id="mel-rhythm-source"></code></p>
+    <p><b>Result:</b> <code id="mel-rhythm-similar"></code></p>
+    <p><b>It took:</b> <code id="mel-rhythm-similar-time"></code></p>
+
+    <br>
+
+    <h3>Sampling</h3>
+    <p>Sample new rhythms.</p>
+    <p><b>It took:</b> <code id="mel-rhythm-sample-time"></code></p>
+    <p><b>Samples:</b> <code id="mel-rhythm-samples"></code></p>
+  </section>
+
+  <h2>Generate Shape Directly</h2>
+  <section>
+    <h3>Interpolation (5 steps) <span id="generate-melody-shape"></span></h3>
+    <p>Interpolate between melody shapes.</p>
+    <p><b>Input:</b> <code id="mel-shape-inputs"></code></p>
+    <p><b>Result:</b> <code id="mel-shape-interp"></code></p>
+    <p><b>It took:</b> <code id="mel-shape-interp-time"></code></p>
+
+    <br>
+
+    <h3>Similar Shape Generation</h3>
+    <p>Generate shapes similar to a source shape.</p>
+    <p><b>Source:</b> <code id="mel-shape-source"></code></p>
+    <p><b>Result:</b> <code id="mel-shape-similar"></code></p>
+    <p><b>It took:</b> <code id="mel-shape-similar-time"></code></p>
+
+    <br>
+
+    <h3>Sampling</h3>
+    <p>Sample new shapes.</p>
+    <p><b>It took:</b> <code id="mel-shape-sample-time"></code></p>
+    <p><b>Samples:</b> <code id="mel-shape-samples"></code></p>
+  </section>
+
+  <h2>Sample Rhythm, Shape, and Melody Hierarchically</h2>
+  <section>
+    <h3><span id="generate-melody-multi"></span></h3>
+    <p>Sample a rhythm, a shape, and then a melody conditioned on those.</p>
+    <p><b>It took:</b> <code id="mel-multi-sample-time"></code></p>
+    <p><b>Rhythm / Shape / Melody:</b> <code id="mel-multi-seqs"></code></p>
+    <p><b>Ionian / Lydian / Mixolydian Melodies:</b> <code id="mel-multi-key-seqs"></code></p>
+
+    <br>
+
+    <h3>Similar Melody Generation</h3>
+    <p>Generate melodies from rhythms & shapes similar to the above.</p>
+    <p><b>Result:</b> <code id="mel-multi-similar"></code></p>
+    <p><b>It took:</b> <code id="mel-multi-similar-time"></code></p>
+  </section>
+
+  <section>
+    <p><b>Total Leaked Memory:</b> <code id="leaked-memory"></code></b></p>
+  </section>
+
+  <script src="melody_controls_bundle.js"></script>
+</body>
+</html>
