--- a/music/demos/metronome.html
+++ b/music/demos/metronome.html
@@ -20,4 +20,20 @@ limitations under the License.
 
   <style>
     table {margin: 24px 0}
- 
+    thead {font-weight: bold}
+    tr {padding: 8px 0}
+    td {width: 100px}
+    .bar {
+      background: black;
+      color: white;
+    }
+    .quarter {
+      background: gold;
+      color: black;
+    }
+  </style>
+</head>
+<body>
+  <h1>mm.Metronome</h1>
+  <p>
+    <code>mm.Metronome</code> allows you to to keep ti
