--- a/music/demos/metronome.html
+++ b/music/demos/metronome.html
@@ -63,4 +63,5 @@ limitations under the License.
     </table>
   </section>
 </body>
-  <script src="metronome_b
+  <script src="metronome_bundle.js"></script>
+</html>
