Remove debugging print

--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -20,4 +20,14 @@ limitations under the License.
     input[type="file"] {
       width: 0;
       height: 0;
-    
+      opacity: 0;
+      cursor: pointer;
+      display: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>MidiME</h1>
+  <p><code>MidiME</code> is a variational autoencoder that lets you personalize
+    your own <code>MusicVAE</code> model with just a little data, so that samples
+    from <code>MidiME</code> sound closer to your provided data. Normally tra
