--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -66,4 +66,11 @@ limitations under the License.
 
   <h2>Input reconstruction</h2>
   <section>
-    <p><b>Before training:
+    <p><b>Before training:</b> <code id="mel_pre-training"></code></p>
+    <p><b>After training:</b> <code id="mel_post-training"></code></p>
+    <p><b>It took:</b> <code id="mel_training-time"></code></p>
+  </section>
+
+  <h2>Random samples</h2>
+  <p>You can now sample from MidiMe. If you trained for long enough, then
+    these samples will be very si
