new test record

--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -73,4 +73,10 @@ limitations under the License.
 
   <h2>Random samples</h2>
   <p>You can now sample from MidiMe. If you trained for long enough, then
-    these samples will be very si
+    these samples will be very similar to the input data. Contrast this with
+    random samples from MusicVAE, which do not sound like the input data.
+  </p>
+  <p>Each of the examples below is 5 concatenated 2-bar samples.</p>
+  <section>
+    <p><b>From MusicVAE</b> <code id="mel_sample-musicvae"></code></p>
+    <p><b>From trained MidiMe</b> <code id="mel_sampl
