Core models optimized

--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -79,4 +79,12 @@ limitations under the License.
   <p>Each of the examples below is 5 concatenated 2-bar samples.</p>
   <section>
     <p><b>From MusicVAE</b> <code id="mel_sample-musicvae"></code></p>
-    <p><b>From trained MidiMe</b> <code id="mel_sampl
+    <p><b>From trained MidiMe</b> <code id="mel_sample-midime"></code></p>
+  </section>
+
+  <h2>2. Polyphonic models</h2>
+  <section>
+    <p>In this example we are using the <code>trio_4bar</code> checkpoint, which
+      uses 3 different instruments. You will notice in these results that
+      the reconstruction of your original melody is far worse (and might not
+      even won't necessarily sound like the input), but 
