--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -97,4 +97,14 @@ limitations under the License.
   </section>
 
   <h2>Training</h2>
-  <p>We will again train a variational autoenc
+  <p>We will again train a variational autoencoder in the
+    browser. In this example we will train longer than we did in the monophonic
+    case.
+    <button id="trio_train" disabled>start training</button>
+  </p>
+  <section>
+    <svg id="trio_graph"></svg>
+  </section>
+
+  <h2>Input reconstruction</h2>
+  <p>You'll notice that unlike the monophonic case, th
