working on custom banner

--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -114,4 +114,11 @@ limitations under the License.
   </p>
   <section>
     <p><b>Before training:</b> <code id="trio_pre-training"></code></p>
-    <p><b>After 
+    <p><b>After training:</b> <code id="trio_post-training"></code></p>
+    <p><b>It took:</b> <code id="trio_training-time"></code></p>
+  </section>
+
+  <h2>Random samples</h2>
+  <p>As before, we can now sample from MidiMe. The samples should sound
+    more melodic and have more interesting patterns (that have been learnt
+    from your input data
