Working on Bugzilla searching in PressZilla

--- a/music/demos/midi_me.html
+++ b/music/demos/midi_me.html
@@ -121,4 +121,13 @@ limitations under the License.
   <h2>Random samples</h2>
   <p>As before, we can now sample from MidiMe. The samples should sound
     more melodic and have more interesting patterns (that have been learnt
-    from your input data
+    from your input data), that the random samples from MusicVAE.
+  </p>
+  <p>Each of the examples below is 5 concatenated 4-bar samples.</p>
+  <section>
+    <p><b>From MusicVAE</b> <code id="trio_sample-musicvae"></code></p>
+    <p><b>From trained MidiMe</b> <code id="trio_sample-midime"></code></p>
+  </section>
+  <script src="midi_me_bundle.js"></script>
+</body>
+</html>
