fix flake8 issues

--- a/music/demos/music_rnn.html
+++ b/music/demos/music_rnn.html
@@ -30,3 +30,30 @@ limitations under the License.
 
   <h2>Melody Continuation</h2>
   <section>
+    <p><b>Input NoteSequence: </b><code id="melody-cont-inputs">Loading...</code></p>
+    <p><b>Result: </b><code id="melody-cont-results">Loading...</code></p>
+    <p><b>It took: </b><code id="melody-cont-time"></code></p>
+
+  </section>
+
+  <h2>Drums Continuation</h2>
+  <section>
+    <p><b>Input NoteSequence: </b><code id="drums-cont-inputs"></code></p>
+    <p><b>Result: </b><code id="drums-cont-results">Loading...</code></p>
+    <p><b>It took: </b><code id="drums-cont-time"></code></p>
+  </section>
+
+  <h2>Chord Pitches Improv Continuation</h2>
+  <section>
+    <p><b>Input NoteSequence: </b><code id="improv-cont-inputs"></code></p>
+    <p><b>Result: </b><code id="improv-cont-results">Loading...</code></p>
+    <p><b>It took: </b><code id="improv-cont-time"></code></p>
+  </section>
+
+  <section>
+    <p><b>Total Leaked Memory:</b> <code id="leaked-memory"></code></b></p>
+  </section>
+
+  <script src="music_rnn_bundle.js"></script>
+</body>
+</html>
