add license info

--- a/music/demos/piano_genie.html
+++ b/music/demos/piano_genie.html
@@ -18,4 +18,9 @@ limitations under the License.
   <title>Piano Genie</title>
 </head>
 <body>
-  <h1>
+  <h1>Piano Genie</h1>
+
+  <p>Implements Magenta's <a href="https://magenta.tensorflow.org/pianogenie"><i>Piano Genie</i></a> model.</p>
+  <p>Piano Genie expands novice performances on a miniature piano keyboard (8 keys) to performances on full pianos (88 keys) in real-time.</p>
+  <p id="loading">Loading model weights...</p>
+  <p id="l
