--- a/music/demos/piano_genie.html
+++ b/music/demos/piano_genie.html
@@ -23,4 +23,8 @@ limitations under the License.
   <p>Implements Magenta's <a href="https://magenta.tensorflow.org/pianogenie"><i>Piano Genie</i></a> model.</p>
   <p>Piano Genie expands novice performances on a miniature piano keyboard (8 keys) to performances on full pianos (88 keys) in real-time.</p>
   <p id="loading">Loading model weights...</p>
-  <p id="l
+  <p id="loaded" hidden>Press keyboard keys 1-8 to hear sound.</p>
+
+  <script src="piano_genie_bundle.js"></script>
+</body>
+</html>
