auto girlfriend/common

--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -20,4 +20,11 @@ limitations under the License.
 <body>
   <h1>Piano Genie Conditioned</h1>
 
-  <p>Implements Magenta's <a href="https://magenta.tensorflow.org/pianogenie"><i>Piano Genie</i></a>
+  <p>Implements Magenta's <a href="https://magenta.tensorflow.org/pianogenie"><i>Piano Genie</i></a> model with conditioning on musical context.</p>
+  <p>Piano Genie expands novice performances on a miniature piano keyboard (8 keys) to performances on full pianos (88 keys) in real-time.</p>
+  <p>Press keyboard keys 1-8 to hear sound.</p>
+
+  <div id="model">
+    <select id="models"></select>
+  </div>
+  <div id
