net_sched: gact: Fix potential panic in tcf_gact().

--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -38,3 +38,12 @@ limitations under the License.
       </div>
       <div id="dt_only"></div>
       <div id="keysig">
+        <label>Key signature</label>
+        <select id="keysig_keysig" class="rs">
+          <option value="0">Unspecified</option>
+          <option value="1">C</option>
+          <option value="2">C#/Db</option>
+          <option value="3">D</option>
+          <option value="4">D#/Eb</option>
+          <option value="5">E</option>
+        
