--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -56,3 +56,11 @@ limitations under the License.
         </select>
       </div>
       <div id="chord">
+          <label>Chord root</label>
+          <select id="chord_chordroot" class="rs">
+            <option value="0">Unspecified</option>
+            <option value="1">C</option>
+            <option value="2">C#/Db</option>
+            <option value="3">D</option>
+            <option value="4">D#/Eb</option>
+            <opt
