x86: remove the x32 syscall bitmask from syscall_get_nr()

--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -87,4 +87,11 @@ limitations under the License.
           </select>
       </div>
       <div id="keysig_chordfamily">
-          <label>Key
+          <label>Key signature</label>
+          <select id="keysig_chordfamily_keysig" class="rs">
+            <option value="0">Unspecified</option>
+            <option value="1">C</option>
+            <option value="2">C#/Db</option>
+            <option value="3">D</option>
+            <option value="4">D#/Eb</option>
+            <option va
