--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -94,4 +94,11 @@ limitations under the License.
             <option value="2">C#/Db</option>
             <option value="3">D</option>
             <option value="4">D#/Eb</option>
-            <option va
+            <option value="5">E</option>
+            <option value="6">F</option>
+            <option value="7">F#/Gb</option>
+            <option value="8">G</option>
+            <option value="9">G#/Ab</option>
+            <option value="10">A</option>
+            <option value="11">A#/Bb</option>
+            <optio
