--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -109,4 +109,10 @@ limitations under the License.
             <option value="0">Unspecified</option>
             <option value="1">Major</option>
             <option value="2">Minor</option>
-            <option v
+            <option value="3">Augmented</option>
+            <option value="4">Diminished</option>
+            <option value="5">Dominant Seventh</option>
+            <option value="6">Major Seventh</option>
+            <option value="7">Minor Seventh</option>
+            <option value="8">Minor Seventh Flat Five</option>
+          </select>
