--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -116,3 +116,12 @@ limitations under the License.
             <option value="7">Minor Seventh</option>
             <option value="8">Minor Seventh Flat Five</option>
           </select>
+      </div>
+      <div id="keysig_chord">
+          <label>Key signature</label>
+          <select id="keysig_chord_keysig" class="rs">
+            <option value="0">Unspecified</option>
+            <option value="1">C</option>
+            <option value="2">C#/Db</option>
+            <option value="3">D</option>
+            <optio
