mmc: sdhci: fix NULL dereference in sdhci_request() tuning

--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -132,4 +132,14 @@ limitations under the License.
             <option value="9">G#/Ab</option>
             <option value="10">A</option>
             <option value="11">A#/Bb</option>
-   
+            <option value="12">B</option>
+          </select>
+
+          <label>Chord root</label>
+          <select id="keysig_chord_chordroot" class="rs">
+            <option value="0">Unspecified</option>
+            <option value="1">C</option>
+            <option value="2">C#/Db</option>
+            <option value="3">D</option>
+            <option value="4">D#/Eb</option>
+ 
