--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -149,4 +149,12 @@ limitations under the License.
             <option value="9">G#/Ab</option>
             <option value="10">A</option>
             <option value="11">A#/Bb</option>
-            <option value="12">B</
+            <option value="12">B</option>
+          </select>
+      
+          <label>Chord family</label>
+          <select id="keysig_chord_chordfamily" class="rs">
+            <option value="0">Unspecified</option>
+            <option value="1">Major</option>
+            <option value="2">Minor</option>
+            <option value="3">Augmented</option>
