--- a/music/demos/piano_genie_conditioned.html
+++ b/music/demos/piano_genie_conditioned.html
@@ -167,4 +167,6 @@ limitations under the License.
       </div>
   </div>
 
- 
+  <script src="piano_genie_conditioned_bundle.js"></script>
+</body>
+</html>
