--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -28,4 +28,12 @@ limitations under the License.
 </head>
 <body>
   <h1>Onsets and Frames</h1>
-  <p><code><a href="https://g.co/magenta/ons
+  <p><code><a href="https://g.co/magenta/onsets-frames">Onsets and Frames</a></code>
+    is a deep neural network that transcribes audio of piano performances to
+    <code>NoteSequences</code>/<code>MIDI</code>.
+  </p>
+
+  <h2>From a local audio file</h2>
+  <p>You can use your own piano music file (i.e. actual audio, not midi) for transcription:</p>
+  <section>
+    <label class="button
