--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -44,4 +44,12 @@ limitations under the License.
     <p><audio id="filePlayer" controls hidden></audio></p>
     <p><b>Actual Transcription:</b> <code id="file-results" class="file"></code></p>
     <p><b>It Took:</b> <code id="file-time" class="file"></code></p>
-    <p><b>Total Leaked Memory:</b> <code id="f
+    <p><b>Total Leaked Memory:</b> <code id="file-leaked-memory"></code></b></p>
+  </section>
+
+  <h2>From a microphone recording</h2>
+  <p>You can record piano audio from a microphone and transcribe it. If you're recording
+    something other than piano (like your voice), this will be transcribed but it
+    will probably be fairly noisy and incorrect.
+  </p>
+  <se
