--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -52,4 +52,10 @@ limitations under the License.
     something other than piano (like your voice), this will be transcribed but it
     will probably be fairly noisy and incorrect.
   </p>
-  <se
+  <section>
+    <button id="recordBtn">Record</button>
+    <br>
+    <p><audio id="recorderPlayer" controls hidden></audio></p>
+    <p><b>Actual Transcription:</b> <code id="recorder-results" class="recorder"></code></p>
+    <p><b>It Took:</b> <code id="recorder-time" class="recorder"></code></p>
+    <p><b>Total Leaked Memory:</b> <code id="recorder-leaked-memory"></cod
