--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -66,4 +66,8 @@ limitations under the License.
     <a href="https://librosa.github.io/librosa/generated/librosa.feature.melspectrogram.html" target="_blank"></a>mel spectogram</a>.
   </p>
   <section>
-    <p><b>Original Audio</b><br>
+    <p><b>Original Audio</b><br><audio controls><source type="audio/wav" src="https://storage.googleapis.com/magentadata/js/checkpoints/transcription/onsets_frames_htk0/MAPS_MUS-mz_331_3_ENSTDkCl-250frames.wav"></audio></p>
+    <p><b>Expected Transcription:</b> <code id="expected-audio-ns"></code></p>
+
+    <button id="audioBtn">Start Audio Transcription</button>
+    
