--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -70,4 +70,11 @@ limitations under the License.
     <p><b>Expected Transcription:</b> <code id="expected-audio-ns"></code></p>
 
     <button id="audioBtn">Start Audio Transcription</button>
-    
+    <p><b>Actual Transcription:</b> <code id="audio-results" class="audio"></code></p>
+    <p><b>Match:</b> <code id="audio-match" class="audio"></code></p>
+    <p><b>It Took:</b> <code id="audio-time" class="audio"></code></p>
+    <p><b>Total Leaked Memory:</b> <code id="audio-leaked-memory"></code></b></p>
+  </section>
+
+
+  <h2>From <a href="https://librosa.github.io/librosa/generated
