--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -92,4 +92,12 @@ limitations under the License.
   <h3>Chunk Length 250 / Batch Size 1</h3>
   <section>
     <p><b>Actual Transcription:</b> <code id="250-results" class="batch"></code></p>
-    <p><b>Match:</b> <code id=
+    <p><b>Match:</b> <code id="250-match" class="batch"></code></p>
+    <p><b>It Took:</b> <code id="250-time" class="batch"></code></p>
+  </section>
+
+  <h3>Chunk Length 150 / Batch Size 2</h3>
+  <section>
+    <p><b>Actual Transcription:</b> <code id="150-results" class="batch"></code></p>
+    <p><b>Match:</b> <code id="150-match" class="batch"></code></p>
+    <p><b>It Took:</
