--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -100,4 +100,12 @@ limitations under the License.
   <section>
     <p><b>Actual Transcription:</b> <code id="150-results" class="batch"></code></p>
     <p><b>Match:</b> <code id="150-match" class="batch"></code></p>
-    <p><b>It Took:</
+    <p><b>It Took:</b> <code id="150-time" class="batch"></code></p>
+  </section>
+
+  <h3>Chunk Length 80 / Batch Size 4</h3>
+  <section>
+    <p><b>Actual Transcription:</b> <code id="80-results" class="batch"></code></p>
+    <p><b>Match:</b> <code id="80-match" class="batch"></code></p>
+    <p><b>It Took:</b> <code id="80-time" class="batch"></code></p>
+  </section>
