--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -109,3 +109,13 @@ limitations under the License.
     <p><b>Match:</b> <code id="80-match" class="batch"></code></p>
     <p><b>It Took:</b> <code id="80-time" class="batch"></code></p>
   </section>
+
+  <h3>Chunk Length 62 / Batch Size 4</h3>
+  <section>
+    <p><b>Actual Transcription:</b> <code id="62-results" class="batch"></code></p>
+    <p><b>Match:</b> <code id="62-match" class="batch"></code></p>
+    <p><b>It Took:</b> <code id="62-time" class="batch"></code></p>
+  </section>
+
+  <h3>Chunk Length 50 / Batch Size 5</h3>
+  <
