--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -118,4 +118,14 @@ limitations under the License.
   </section>
 
   <h3>Chunk Length 50 / Batch Size 5</h3>
-  <
+  <section>
+    <p><b>Actual Transcription:</b> <code id="50-results" class="batch"></code></p>
+    <p><b>Match:</b> <code id="50-match" class="batch"></code></p>
+    <p><b>It Took:</b> <code id="50-time" class="batch"></code></p>
+  </section>
+
+  <section>
+    <p><b>Total Leaked Memory:</b> <code id="leaked-memory"></code></b></p>
+  </section>
+
+  <script src="transcription_bundle.js"></scrip
