Add Travis CI config.

--- a/music/demos/transcription.html
+++ b/music/demos/transcription.html
@@ -128,4 +128,6 @@ limitations under the License.
     <p><b>Total Leaked Memory:</b> <code id="leaked-memory"></code></b></p>
   </section>
 
-  <script src="transcription_bundle.js"></scrip
+  <script src="transcription_bundle.js"></script>
+</body>
+</html>
